# cpp-minesweeper

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  build.sh  project_build.sh  start.sh  vcpkg.json
.github/PULL_REQUEST_TEMPLATE/: bug_fix_template.md  docs_template.md
.github/workflows/: build-debug.yml  buildmain.yml  cmake.yml
app/: CMakeLists.txt  main.cpp
include/my_minesweeper/: board.hpp  constants.hpp  driver.hpp  screen.hpp  uicomponents.hpp
include/my_minesweeper/game/: game_state.hpp
include/my_minesweeper/ui/: ui_control.hpp  ui_functions.hpp
source/: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  driver.cpp  game.cpp  uicomponents.cpp
src/core/: constants.cpp  constants.hpp  controller.cpp  controller.hpp  starter.cpp  starter.hpp
src/game/: board.cpp  board.hpp  controller.cpp  controller.hpp  helper.hpp
src/ui/: game_board.cpp  game_board.hpp  main_menu.cpp  main_menu.hpp  ui_control.cpp  ui_helper.cpp  ui_helper.hpp  uicomponents.cpp  window.cpp  window.hpp
tests/: CMakeLists.txt  test.cpp
